--- a/src/resources/assets/less/main.less
+++ b/src/resources/assets/less/main.less
@@ -16,6 +16,12 @@ section.section, aside.section, div.section{
     position:relative;
 }
 
+/* buttons */
+.btn-cta-secondary.active { 
+    background: darken(@btn-color-2, 15%);
+    border: 1px solid @btn-color;    
+}
+
 /* Projects Section */
 div.project {
     min-height: 450px;    
